--- a/main.css
+++ b/main.css
@@ -1,9 +1,8 @@
-body {
+html {
   background: #1C1B1C;
   font-family: 'League Gothic', Helvetica, arial, sans-serif;
   font-weight: 300;
   color: #F2F0F1;
-
 }
 
 .main {
