--- a/main.css
+++ b/main.css
@@ -5,6 +5,11 @@ html {
   color: #F2F0F1;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+}
+
 .main {
   width: 100%;
   text-align: center;
@@ -12,6 +17,7 @@ html {
   max-width: 1100px;
   margin: 0 auto;
   top: 5.5em;
+  padding: 0 10px;
 
 }
 
